--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -449,26 +449,29 @@
                                           </TextArea>
                                        </bottom>
                                        <top>
-                                          <GridPane alignment="CENTER" vgap="5.0" BorderPane.alignment="CENTER">
+                                          <GridPane alignment="CENTER" hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
                                              <children>
-                                                <Label text="Fecha">
+                                                <Label text="Fecha" GridPane.rowIndex="1">
                                                    <GridPane.margin>
                                                       <Insets right="10.0" />
                                                    </GridPane.margin>
                                                 </Label>
-                                                <DatePicker fx:id="dtpRendicionesFecha" layoutX="427.0" layoutY="83.0" prefWidth="105.0" GridPane.columnIndex="1" />
-                                                <Label text="Monto total" GridPane.rowIndex="1">
+                                                <DatePicker fx:id="dtpRendicionesFecha" layoutX="427.0" layoutY="83.0" minWidth="-Infinity" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <Label text="Monto total" GridPane.rowIndex="2">
                                                    <GridPane.margin>
                                                       <Insets right="10.0" />
                                                    </GridPane.margin>
                                                 </Label>
-                                                <TextField fx:id="txtRendicionesMonto" promptText="Ingrese el monto de la rendición" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <TextField fx:id="txtRendicionesMonto" promptText="Ingrese el monto de la rendición" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                <ComboBox minWidth="125.0" GridPane.columnIndex="1" />
+                                                <Label text="Año del Subsidio" />
                                              </children>
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="NEVER" />
-                                                <ColumnConstraints minWidth="10.0" prefWidth="200.0" />
+                                                <ColumnConstraints minWidth="50.0" prefWidth="200.0" />
                                              </columnConstraints>
                                              <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
@@ -593,24 +596,18 @@
                                     </TableView>
                                     <GridPane alignment="CENTER" vgap="5.0">
                                        <children>
-                                          <Label text="Fecha de inicio">
+                                          <Label layoutX="256.0" layoutY="17.0" text="Fecha de finalización">
                                              <GridPane.margin>
                                                 <Insets right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpProrrogasInicio" layoutX="427.0" layoutY="83.0" prefWidth="105.0" GridPane.columnIndex="1" />
-                                          <Label layoutX="256.0" layoutY="17.0" text="Fecha de finalización" GridPane.rowIndex="1">
+                                          <DatePicker fx:id="dtpProrrogasFinalizacion" layoutX="345.0" layoutY="13.0" minWidth="-Infinity" prefWidth="125.0" GridPane.columnIndex="1" />
+                                          <Label text="Disposición" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpProrrogasFinalizacion" layoutX="345.0" layoutY="13.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <Label text="Disposición" GridPane.rowIndex="2">
-                                             <GridPane.margin>
-                                                <Insets right="10.0" />
-                                             </GridPane.margin>
-                                          </Label>
-                                          <TextField fx:id="txtProrrogasDisp" promptText="Ingrese la disposición" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="txtProrrogasDisp" promptText="Ingrese la disposición" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="NEVER" />
@@ -621,7 +618,6 @@
                                           <ColumnConstraints />
                                        </columnConstraints>
                                        <rowConstraints>
-                                          <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
