--- a/src/main/java/vista/interfaces/Personas.fxml
+++ b/src/main/java/vista/interfaces/Personas.fxml
@@ -378,7 +378,7 @@
                                                       <TableView fx:id="tblTitulos" maxHeight="200.0" GridPane.rowIndex="1">
                                                         <columns>
                                                           <TableColumn fx:id="colTitulosTitulo" minWidth="-1.0" prefWidth="-1.0" text="Título" />
-                                                          <TableColumn fx:id="colTituloMayor" maxWidth="1000.0" minWidth="-1.0" prefWidth="-1.0" text="Mayor grado" />
+                                                          <TableColumn fx:id="colTitulosMayor" maxWidth="1000.0" minWidth="-1.0" prefWidth="-1.0" text="Mayor grado" />
                                                         </columns>
                                                          <columnResizePolicy>
                                                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
