Interfaces de usuario finales

--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -26,8 +26,6 @@
          <children>
             <GridPane hgap="5.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="NEVER" />
-                  <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" prefWidth="100.0" />
                   <ColumnConstraints hgrow="NEVER" />
                   <ColumnConstraints hgrow="ALWAYS" />
               </columnConstraints>
@@ -36,22 +34,12 @@
                   <RowConstraints vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <Label text="ID" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField fx:id="txtProyectosId" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="80.0" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </TextField>
-                  <Label text="Nombre" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
+                  <Label text="Nombre" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="txtProyectosNombre" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="3">
+                  <TextField fx:id="txtProyectosNombre" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -544,7 +532,7 @@
                      <content>
                         <ScrollPane fitToHeight="true" fitToWidth="true" prefViewportHeight="506.0" prefViewportWidth="800.0">
                            <content>
-                              <VBox>
+                              <VBox alignment="TOP_CENTER">
                                  <children>
                                     <GridPane>
                                        <children>
@@ -582,12 +570,11 @@
                                           <Insets top="10.0" />
                                        </VBox.margin>
                                     </GridPane>
-                                    <TableView fx:id="tblProrrogas" minHeight="-Infinity" prefHeight="150.0">
+                                    <TableView fx:id="tblProrrogas" maxWidth="150.0" minHeight="-Infinity" prefHeight="150.0">
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                        <columns>
-                                          <TableColumn fx:id="colProrrogasInicio" prefWidth="75.0" text="Fecha de inicio" />
                                           <TableColumn fx:id="colProrrogasFinalización" prefWidth="75.0" text="Fecha de finalización" />
                                        </columns>
                                        <VBox.margin>
