--- a/src/main/java/vista/interfaces/Programas.fxml
+++ b/src/main/java/vista/interfaces/Programas.fxml
@@ -16,8 +16,6 @@
    <children>
       <GridPane VBox.vgrow="NEVER">
         <columnConstraints>
-          <ColumnConstraints hgrow="NEVER" />
-            <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" prefWidth="100.0" />
             <ColumnConstraints hgrow="NEVER" />
             <ColumnConstraints hgrow="ALWAYS" />
         </columnConstraints>
@@ -26,22 +24,12 @@
             <RowConstraints vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <Label text="ID" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
+            <Label text="Nombre" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Nombre" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="txtProgramasID" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="80.0" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="txtProgramasNombre" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="3">
+            <TextField fx:id="txtProgramasNombre" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -233,7 +221,6 @@
                      <center>
                         <TableView fx:id="tblProyectos" minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
                           <columns>
-                            <TableColumn fx:id="colProyectosID" prefWidth="75.0" text="ID" />
                             <TableColumn fx:id="colProyectosNombre" prefWidth="75.0" text="Nombre de proyecto" />
                           </columns>
                            <columnResizePolicy>
