--- a/src/main/java/vista/interfaces/Programas.fxml
+++ b/src/main/java/vista/interfaces/Programas.fxml
@@ -29,7 +29,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="txtProgramasNombre" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <TextField fx:id="txtProgramas" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -38,17 +38,17 @@
       </GridPane>
       <GridPane alignment="BOTTOM_LEFT">
          <children>
-            <Button fx:id="btnProgramasBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar programa" textOverrun="CLIP" GridPane.columnIndex="1">
+            <Button fx:id="btnProgramasBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarPrograma" text="Buscar programa" textOverrun="CLIP" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="btnProgramasNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo programa" textOverrun="CLIP" GridPane.columnIndex="2">
+            <Button fx:id="btnProgramasNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoPrograma" text="Nuevo programa" textOverrun="CLIP" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="btnProgramasEliiminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar programa" textOverrun="CLIP" GridPane.columnIndex="3">
+            <Button fx:id="btnProgramasEliiminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarPrograma" text="Eliminar programa" textOverrun="CLIP" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -80,12 +80,12 @@
                      <top>
                         <GridPane BorderPane.alignment="CENTER">
                            <children>
-                              <Button fx:id="btnProgramasGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="1">
+                              <Button fx:id="btnProgramasGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarCambios" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button fx:id="btnProgramasDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
+                              <Button fx:id="btnProgramasDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarCambios" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
@@ -114,7 +114,7 @@
       	                                    </GridPane.margin>
       	                                 </Label>
       	                                 <TextField fx:id="txtProgramasDirector" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      	                                 <Button fx:id="btnProgramasDirector" mnemonicParsing="false" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      	                                 <Button fx:id="btnProgramasDirector" mnemonicParsing="false" onAction="#seleccionarDirector" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="1">
       	                                    <GridPane.margin>
       	                                       <Insets left="10.0" />
       	                                    </GridPane.margin>
@@ -125,7 +125,7 @@
       	                                    </GridPane.margin>
       	                                 </Label>
       	                                 <TextField fx:id="txtProgramasCodirector" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      	                                 <Button fx:id="btnProgramasCodirector" mnemonicParsing="false" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      	                                 <Button fx:id="btnProgramasCodirector" mnemonicParsing="false" onAction="#seleccionarCodirector" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="2">
       	                                    <GridPane.margin>
       	                                       <Insets left="10.0" />
       	                                    </GridPane.margin>
@@ -193,12 +193,12 @@
                      <top>
                         <GridPane BorderPane.alignment="CENTER">
                            <children>
-                              <Button fx:id="btnProyectosAgregar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Agregar proyecto" textOverrun="CLIP" GridPane.columnIndex="1">
+                              <Button fx:id="btnProyectosAgregar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarProyecto" text="Agregar proyecto" textOverrun="CLIP" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button fx:id="btnProyectosQuitar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar proyecto" textOverrun="CLIP" GridPane.columnIndex="2">
+                              <Button fx:id="btnProyectosQuitar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#quitarProyecto" text="Quitar proyecto" textOverrun="CLIP" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
