--- a/src/main/java/vista/interfaces/Usuarios.fxml
+++ b/src/main/java/vista/interfaces/Usuarios.fxml
@@ -138,7 +138,7 @@
                <children>
                   <TableView fx:id="tblDisponibles" GridPane.rowSpan="2147483647">
                     <columns>
-                      <TableColumn fx:id="colDisponibles" prefWidth="75.0" text="Roles disponibles" />
+                      <TableColumn fx:id="colDisponiblesRol" prefWidth="75.0" text="Roles disponibles" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -159,7 +159,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                      <columns>
-                        <TableColumn fx:id="colUsuario" prefWidth="75.0" text="Roles del usuario" />
+                        <TableColumn fx:id="colUsuarioRol" prefWidth="75.0" text="Roles del usuario" />
                      </columns>
                   </TableView>
                </children>
