--- a/src/main/java/vista/interfaces/Programas.fxml
+++ b/src/main/java/vista/interfaces/Programas.fxml
@@ -138,26 +138,14 @@
       	                                    </GridPane.margin>
       	                                 </Label>
       	                                 <TextField fx:id="txtProgramasDisp" promptText="Ingrese la disposición" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      	                                 <Label text="Fecha de presentación" GridPane.rowIndex="5">
-      	                                    <GridPane.margin>
-      	                                       <Insets right="10.0" />
-      	                                    </GridPane.margin>
-      	                                 </Label>
-      	                                 <DatePicker fx:id="dtpProgramasPresentacion" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Label layoutX="67.0" layoutY="137.0" text="Fecha de aprobación" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                              <Label layoutX="127.0" layoutY="137.0" text="Fecha de inicio" GridPane.rowIndex="5" />
+                              <DatePicker fx:id="dtpProgramasInicio" layoutX="587.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label layoutX="466.0" layoutY="137.0" text="Fecha de finalización" GridPane.columnIndex="2" GridPane.rowIndex="5">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Label>
-      	                                 <DatePicker fx:id="dtpProgramasAprobacion" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                              <Label layoutX="127.0" layoutY="137.0" text="Fecha de inicio" GridPane.rowIndex="6" />
-                              <DatePicker fx:id="dtpProgramasInicio" layoutX="587.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                              <Label layoutX="466.0" layoutY="137.0" text="Fecha de finalización" GridPane.columnIndex="2" GridPane.rowIndex="6">
-                                 <GridPane.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </GridPane.margin>
-                              </Label>
-                              <DatePicker fx:id="dtpProgramasFinalizacion" layoutX="256.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                              <DatePicker fx:id="dtpProgramasFinalizacion" layoutX="256.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                               <Label text="Nombre" />
                               <TextField fx:id="txtProgramasNombre" promptText="Ingrese el nombre del programa" GridPane.columnIndex="1" />
       	                              </children>
@@ -171,7 +159,6 @@
       	                              </columnConstraints>
       	                              <rowConstraints>
                               <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
-      	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
       	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
       	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
       	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
@@ -219,7 +206,7 @@
                         </GridPane>
                      </top>
                      <center>
-                        <TableView fx:id="tblProyectos" minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tblProyectos" minHeight="-Infinity" prefHeight="176.0" prefWidth="794.0" BorderPane.alignment="CENTER">
                           <columns>
                             <TableColumn fx:id="colProyectosNombre" prefWidth="75.0" text="Nombre de proyecto" />
                           </columns>
