--- a/src/main/java/vista/interfaces/Style.css
+++ b/src/main/java/vista/interfaces/Style.css
@@ -2,6 +2,10 @@
 	-fx-font-size: 14px;
 }
 
+DatePicker {
+	-fx-pref-width: 125px;
+}
+
 .pane-border {
 	-fx-border-color: lightgray;
 	-fx-border-width: 2;
