--- a/src/main/java/vista/interfaces/Roles.fxml
+++ b/src/main/java/vista/interfaces/Roles.fxml
@@ -122,11 +122,11 @@
                      <children>
                         <TableView fx:id="tblPermisos" editable="true">
                           <columns>
-                            <TableColumn editable="false" prefWidth="75.0" text="Módulo" />
-                              <TableColumn maxWidth="700.0" prefWidth="75.0" text="Ver" />
-                            <TableColumn maxWidth="700.0" prefWidth="75.0" text="Crear" />
-                              <TableColumn maxWidth="700.0" prefWidth="75.0" text="Modificar" />
-                              <TableColumn maxWidth="700.0" prefWidth="75.0" text="Eliminar" />
+                            <TableColumn fx:id="colPermisosModulo" editable="false" prefWidth="75.0" text="Módulo" />
+                              <TableColumn fx:id="colPermisosVer" maxWidth="700.0" prefWidth="75.0" text="Ver" />
+                            <TableColumn fx:id="colPermisosCrear" maxWidth="700.0" prefWidth="75.0" text="Crear" />
+                              <TableColumn fx:id="colPermisosModificar" maxWidth="700.0" prefWidth="75.0" text="Modificar" />
+                              <TableColumn fx:id="colPermisosEliminar" maxWidth="700.0" prefWidth="75.0" text="Eliminar" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
