--- a/src/main/java/vista/interfaces/Login.fxml
+++ b/src/main/java/vista/interfaces/Login.fxml
@@ -11,7 +11,7 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+      <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
     <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints vgrow="NEVER" />
@@ -28,7 +28,7 @@
    </padding>
    <children>
       <Label styleClass="login-title" text="Ingresar a Plumas" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-      <Button fx:id="btnLoginSalir" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="X" GridPane.halignment="RIGHT">
+      <Button fx:id="btnLoginSalir" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#salir" prefHeight="30.0" prefWidth="30.0" text="X" GridPane.halignment="RIGHT">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
@@ -36,8 +36,8 @@
       <Label styleClass="login-label" text="Usuario" GridPane.rowIndex="3" />
       <Label styleClass="login-label" text="Contraseña" GridPane.rowIndex="6" />
       <TextField fx:id="txtLoginUsuario" styleClass="login-field" GridPane.rowIndex="4" />
-      <TextField fx:id="txtLoginContrasena" styleClass="login-field" GridPane.rowIndex="7" />
-      <Button fx:id="btnLoginIngresar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="login-submit" text="Ingresar" GridPane.rowIndex="9" />
+      <PasswordField fx:id="txtLoginContrasena" GridPane.rowIndex="7" />
+      <Button fx:id="btnLoginIngresar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ingresar" styleClass="login-submit" text="Ingresar" GridPane.rowIndex="9" />
       <Label fx:id="lblLoginAyuda" styleClass="login-title" text="¿Necesitas ayuda?" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
    </children>
 </GridPane>
