--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -575,7 +575,7 @@
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                        <columns>
-                                          <TableColumn fx:id="colProrrogasFinalización" prefWidth="75.0" text="Fecha de finalización" />
+                                          <TableColumn fx:id="colProrrogasFinalizacion" prefWidth="75.0" text="Fecha de finalización" />
                                        </columns>
                                        <VBox.margin>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
