--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -176,7 +176,7 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </ComboBox>
-                                          <Button fx:id="btnDatosPersona" mnemonicParsing="false" onAction="#seleccionarPersona" prefHeight="30.0" prefWidth="307.0" text="Asignar Persona" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <Button fx:id="btnDatosPersona" mnemonicParsing="false" onAction="#seleccionarPersona" prefHeight="30.0" prefWidth="307.0" text="Buscar Documento" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="NEVER" minWidth="50.0" />
