--- a/src/main/java/vista/interfaces/Usuarios.fxml
+++ b/src/main/java/vista/interfaces/Usuarios.fxml
@@ -66,7 +66,7 @@
                      </GridPane.margin>
                   </Label>
                   <TextField fx:id="txtDescripcion" promptText="Ingrese una descripción para el usuario" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
-                  <Button fx:id="btnPersona" mnemonicParsing="false" onAction="#seleccionarPersona" prefHeight="30.0" prefWidth="204.0" text="Asignar Persona" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Button fx:id="btnPersona" mnemonicParsing="false" onAction="#seleccionarPersona" prefHeight="30.0" prefWidth="204.0" text="Buscar Documento" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
