--- a/src/main/java/vista/interfaces/Informes.fxml
+++ b/src/main/java/vista/interfaces/Informes.fxml
@@ -52,7 +52,7 @@
                   </Button>
                </children>
             </GridPane>
-            <GridPane hgap="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+            <GridPane hgap="10.0" vgap="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
               <columnConstraints>
                   <ColumnConstraints hgrow="NEVER" minWidth="-Infinity" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -132,38 +132,32 @@
                <children>
                   <GridPane minHeight="-Infinity" prefHeight="200.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="75.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
                       <RowConstraints vgrow="NEVER" />
                     </rowConstraints>
                      <children>
-                        <Button fx:id="btnFiltroDuplicar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#duplicarColumna" text="Duplicar">
+                        <Button fx:id="btnFiltroVer" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#verColumna" text="Ver">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnFiltroVer" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#verColumna" text="Ver" GridPane.columnIndex="1">
+                        <Button fx:id="btnFiltroOrdenar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ordenarColumna" text="Ordenar" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnFiltroOrdenar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ordenarColumna" text="Ordenar" GridPane.columnIndex="2">
+                        <Button fx:id="btnFiltroSubir" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#subirColumna" text="Subir" GridPane.columnIndex="2">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnFiltroSubir" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#subirColumna" text="Subir" GridPane.columnIndex="3">
-                           <GridPane.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="btnFiltroBajar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#bajarColumna" text="Bajar" GridPane.columnIndex="4">
+                        <Button fx:id="btnFiltroBajar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#bajarColumna" text="Bajar" GridPane.columnIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
@@ -208,7 +202,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" />
                      </HBox.margin>
                      <children>
-                        <Label text="Nombre">
+                        <Label minWidth="55.0" text="Nombre">
                            <GridPane.margin>
                               <Insets right="10.0" />
                            </GridPane.margin>
@@ -220,6 +214,7 @@
                            </GridPane.margin>
                         </ComboBox>
                         <TextField fx:id="txtFiltroCondicion" minWidth="-Infinity" prefWidth="150.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+                        <DatePicker fx:id="dtpFiltroCondicion" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                         <ComboBox fx:id="cmbFiltroCalculo" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Cálculo" GridPane.columnSpan="2" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets right="10.0" />
