--- a/src/main/java/vista/interfaces/ListaInformes.fxml
+++ b/src/main/java/vista/interfaces/ListaInformes.fxml
@@ -38,12 +38,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="btnListaInformesEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar informe" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+            <Button fx:id="btnListaInformesEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminar" text="Eliminar informe" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="btnListaInformesNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo informe" GridPane.columnIndex="1">
+            <Button fx:id="btnListaInformesNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevo" text="Nuevo informe" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -51,7 +51,7 @@
                   <Tooltip text="Crear un nuevo informe a partir de una plantilla" />
                </tooltip>
             </Button>
-            <Button fx:id="btnListaInformesVerEditar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver / Editar informe" GridPane.columnIndex="2">
+            <Button fx:id="btnListaInformesVerEditar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#editar" text="Ver / Editar informe" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
