--- a/src/main/java/vista/interfaces/Principal.fxml
+++ b/src/main/java/vista/interfaces/Principal.fxml
@@ -49,7 +49,10 @@
                   <MenuItem fx:id="mnuProyectos" disable="true" mnemonicParsing="false" onAction="#pantallaProyectos" text="Proyectos de investigación" />
                </items>
             </Menu>
-            <Menu fx:id="mnuInformes" disable="true" mnemonicParsing="false" onAction="#pantallaListaInformes" text="Informes" />
+            <Menu mnemonicParsing="false" text="Informes">
+               <items>
+                  <MenuItem fx:id="mnuInformes" disable="true" mnemonicParsing="false" onAction="#pantallaListaInformes" text="Ver Informes" />
+               </items></Menu>
             <Menu mnemonicParsing="false" text="Ayuda">
               <items>
                 <MenuItem mnemonicParsing="false" text="Manual de usuario" />
