--- a/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
+++ b/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
@@ -18,7 +18,7 @@
       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
    </rowConstraints>
    <children>
-      <TextField fx:id="txtCargoDocenteCriterio" promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
+      <TextField fx:id="txtCargoDocenteCriterio" onKeyPressed="#keyPressed" promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
