--- a/src/main/java/vista/interfaces/Personas.fxml
+++ b/src/main/java/vista/interfaces/Personas.fxml
@@ -49,24 +49,34 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints />
                   <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btnPersonasBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarPersona" text="Buscar persona" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btnPersonasBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarPersona" text="Buscar persona" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnPersonasNueva" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevaPersona" text="Nueva persona" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btnPersonasNueva" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevaPersona" text="Nueva persona" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnPersonasEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarPersona" text="Eliminar persona" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <Button fx:id="btnPersonasEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarPersona" text="Eliminar persona" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnPersonasGuardar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarPersona" text="Guardar cambios" GridPane.rowIndex="2">
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Button>
+                  <Button fx:id="btnPersonasDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarPersona" text="Descartar cambios" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -92,29 +102,6 @@
                               <RowConstraints vgrow="NEVER" />
                            </rowConstraints>
                            <children>
-                              <GridPane>
-                                 <children>
-                                    <Button fx:id="btnDatosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarPersona" text="Guardar cambios" GridPane.columnIndex="1">
-                                       <GridPane.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                    <Button fx:id="btnDatosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarPersona" text="Descartar cambios" GridPane.columnIndex="2">
-                                       <GridPane.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                 </children>
-                                 <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                 </columnConstraints>
-                                 <rowConstraints>
-                                    <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                 </rowConstraints>
-                              </GridPane>
                               <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.rowIndex="1">
                                  <children>
                                     <Label text="Apellido">
@@ -211,12 +198,12 @@
                                 </rowConstraints>
                                  <children>
                                     <Button fx:id="btnContactosNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoContacto" text="Nuevo contacto" />
-                                    <Button fx:id="btnContactosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarContacto" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnContactosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarContacto" text="Guardar contacto" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnContactosDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarContacto" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnContactosDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarContacto" text="Descartar contacto" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
@@ -263,12 +250,12 @@
                               <GridPane hgap="10.0">
                                  <children>
                                     <Button fx:id="btnDomiciliosNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoDomicilio" text="Nuevo domicilio" />
-                                    <Button fx:id="btnDomiciliosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarDomicilio" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnDomiciliosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarDomicilio" text="Guardar domicilio" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnDomicilioDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarDomicilio" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnDomicilioDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarDomicilio" text="Descartar domicilio" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
