--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -51,36 +51,38 @@
             </GridPane>
             <GridPane alignment="BOTTOM_LEFT" hgap="10.0" GridPane.rowIndex="1">
                <children>
-                  <Button fx:id="btnProyectosBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarProyecto" text="Buscar proyecto" GridPane.columnIndex="1">
+                  <Button fx:id="btnProyectosBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarProyecto" text="Buscar proyecto">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnProyectosNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoProyecto" text="Nuevo proyecto" GridPane.columnIndex="2">
+                  <Button fx:id="btnProyectosNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoProyecto" text="Nuevo proyecto" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnProyectosEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarProyecto" text="Eliminar proyecto" GridPane.columnIndex="3">
+                  <Button fx:id="btnProyectosEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarProyecto" text="Eliminar proyecto" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
+                  <Button fx:id="btnProyectosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarProyecto" text="Guardar cambios" GridPane.rowIndex="1" />
+                  <Button fx:id="btnProyectosDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarProyecto" text="Descartar cambios" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets />
                </GridPane.margin>
             </GridPane>
-            <TabPane fx:id="tabpaneProyectos" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
+            <TabPane fx:id="tabpaneProyectos" prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
                <tabs>
                   <Tab closable="false" onSelectionChanged="#inicializarDatos" text="Datos">
                      <content>
@@ -92,33 +94,9 @@
                                  </columnConstraints>
                                  <rowConstraints>
                                     <RowConstraints minHeight="30.0" vgrow="NEVER" />
-                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
                                  </rowConstraints>
                                  <children>
-                                    <GridPane hgap="10.0">
-                                       <children>
-                                          <Button fx:id="btnDatosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarProyecto" text="Guardar cambios" GridPane.columnIndex="1">
-                                             <GridPane.margin>
-                                                <Insets />
-                                             </GridPane.margin>
-                                          </Button>
-                                          <Button fx:id="btnDatosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarProyecto" text="Descartar cambios" GridPane.columnIndex="2">
-                                             <GridPane.margin>
-                                                <Insets />
-                                             </GridPane.margin>
-                                          </Button>
-                                       </children>
-                                       <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                       </columnConstraints>
-                                       <rowConstraints>
-                                          <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                       </rowConstraints>
-                                    </GridPane>
-      	                      	   <GridPane alignment="TOP_CENTER" hgap="5.0" vgap="5.0" GridPane.rowIndex="1">
+      	                      	   <GridPane alignment="TOP_CENTER" hgap="5.0" vgap="5.0">
       	                              <children>
                                           <Label text="Nombre" />
                                           <TextField fx:id="txtDatosNombre" promptText="Ingrese el nombre del proyecto" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
@@ -204,12 +182,12 @@
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnIntegrantesGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarIntegrante" text="Guardar cambios" GridPane.columnIndex="1">
+                                          <Button fx:id="btnIntegrantesGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarIntegrante" text="Guardar integrante" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnIntegrantesDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarIntegrante" text="Descartar cambios" GridPane.columnIndex="2">
+                                          <Button fx:id="btnIntegrantesDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarIntegrante" text="Descartar integrante" GridPane.columnIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
@@ -325,12 +303,12 @@
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnSubsidiosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarSubsidio" text="Guardar cambios" GridPane.columnIndex="1">
+                                          <Button fx:id="btnSubsidiosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarSubsidio" text="Guardar subsidio" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnSubsidiosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarSubsidio" text="Descartar cambios" GridPane.columnIndex="2">
+                                          <Button fx:id="btnSubsidiosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarSubsidio" text="Descartar subsidio" GridPane.columnIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
@@ -493,12 +471,12 @@
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnRendicionesGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarRendicion" text="Guardar cambios" GridPane.columnIndex="1">
+                                          <Button fx:id="btnRendicionesGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarRendicion" text="Guardar rendición" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnRendicionesDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarRendicion" text="Descartar cambios" GridPane.columnIndex="2">
+                                          <Button fx:id="btnRendicionesDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarRendicion" text="Descartar rendición" GridPane.columnIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
@@ -541,12 +519,12 @@
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnProrrogasGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarProrroga" text="Guardar cambios" GridPane.columnIndex="1">
+                                          <Button fx:id="btnProrrogasGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarProrroga" text="Guardar prórroga" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnProrrogasDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarProrroga" text="Descartar cambios" GridPane.columnIndex="2">
+                                          <Button fx:id="btnProrrogasDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarProrroga" text="Descartar prórroga" GridPane.columnIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
@@ -628,34 +606,6 @@
                                  </BorderPane.margin>
                               </TextArea>
                            </center>
-                           <top>
-                              <GridPane BorderPane.alignment="CENTER">
-                                 <children>
-                                    <Button fx:id="btnResumenGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarResumen" text="Guardar cambios" GridPane.columnIndex="1">
-                                       <GridPane.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                    <Button fx:id="btnResumenDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarResumen" text="Descartar cambios" GridPane.columnIndex="2">
-                                       <GridPane.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                 </children>
-                                 <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                 </columnConstraints>
-                                 <rowConstraints>
-                                    <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                 </rowConstraints>
-                              </GridPane>
-                           </top>
-                           <padding>
-                              <Insets top="10.0" />
-                           </padding>
                         </BorderPane>
                      </content>
                   </Tab>
